# AoC-2019

./: .gitignore  README.md
AoC01/: main.py
AoC_01/: main.py
AoC_02/: .clang-format  CMakeLists.txt  main_part1.cpp  main_part2.cpp
AoC_02/include/: utils.h
AoC_03/: main.m  main_part1.m
AoC_04/: Gemfile  main_part1.rb
common/IntCodeMachine/: IntCodeMachine.cpp  IntCodeMachine.h  utils.h
common/include/: IntCode_utils.h
